<?xml version="1.0"?>
<package format="3">
  <name>tiago_laser_sensors</name>
  <version>4.1.7</version>
  <description>Launch files and scripts needed to bring up the ROS nodes of a TIAGo robot.</description>
  <maintainer email="jordan.palacios@pal-robotics.com">Jordan Palacios</maintainer>
  <license>Apache License 2.0</license>
  <author email="antonio.brandi@pal-robotics.com">Antonio Brandi</author>

  <url type="website">https://github.com/pal-robotics/tiago_simulation</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend condition="$PAL_DISTRO >= alum">pal_module_cmake</build_depend>

  <exec_depend condition="$PAL_DISTRO >= alum">sick_tim</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">ira_laser_tools</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">pal_laser_filters</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">dlo_ros</exec_depend>
  <exec_depend condition="$PAL_DISTRO >= alum">pal_nav2_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
